--- a/3_AM/View/index.html
+++ b/3_AM/View/index.html
@@ -1,8 +1,14 @@
 <html>
   <head>
     <title>Sample HTML app</title>
+    <link rel="stylesheet" href="./style.css"/>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>Hello World!!</h1>
+    <ul class = "navigation">
+      <li class = "nav"><a href = "/home" class = "nav">Home</a></li>
+      <li class = "nav"><a href = "/table" class = "nav">Table</a></li>
+      <li class = "nav"><a href = "/info" class = "nav">Info</a></li>
+    </ul>
   </body>
 </html>
